--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <!--建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败-->
     <!--这里加载的语言文件会覆盖你在配置项目里添加的语言类型，比如你在配置项目里配置的是英文，这里加载的中文，那最后就是中文-->
     <script type="text/javascript" charset="utf-8" src="lang/zh-cn/zh-cn.js"></script>
-
+    <script src="./third-party/SyntaxHighlighter/shCore.js"></script>
     <style type="text/css">
         .clear {
             clear: both;
         }
     </style>
+
 </head>
 <body>
 <div>
@@ -82,14 +83,14 @@
         UE.getEditor('editor');
     }
     function getAllHtml() {
-        alert(UE.getEditor('editor').getAllHtml())
+        console.log(UE.getEditor('editor').getAllHtml())
     }
     function getContent() {
         var arr = [];
         arr.push("使用editor.getContent()方法可以获得编辑器的内容");
         arr.push("内容为：");
         arr.push(UE.getEditor('editor').getContent());
-        alert(arr.join("\n"));
+        console.log(UE.getEditor('editor').getContent());
     }
     function getPlainTxt() {
         var arr = [];
